deploy/k8s/goanimes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goanimes
  labels:
    app.kubernetes.io/name: goanimes
