deploy/k8s/goanimes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goanimes
  labels:
    app.kubernetes.io/name: goanimes
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: goanimes
  ports:
    - name: http
      port: 8080
      targetPort: http
